--- a/17/package_test/Cargo.toml
+++ b/17/package_test/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sbb_test_1 = "0.1.0"
